--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <!-- Main navbar -->
                 <ul class="main-nav">
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Academics</a></li>
+                    <li><a href="academics.html">Academics</a></li>
                     <li><a href="#">Faculty</a></li>
                     <li><a href="#">Students</a></li>
                 </ul>
