--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
     </section>
 </div>
 <footer>
-    <small>
-    Copyright Maas University, 2018
-    </small>
+    <small class="smallText">Copyright Maas University, 2018</small>
+    <small><a href="legal.html" class="smallText">Legal</a></small>
 </footer>
 
 <script src="maasUniversity.js"></script>
